--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Content that will be hidden initially -->
     <div class="content">
-        <h1>Hello, this is kainin and I am very bad at it<br>my favorite topic</h1>
+        <h1>Hello, this is Kainin and I am very bad at it<br>my favorite topic</h1>
         <div class="about">
             <ul>
                 <li><a href="#anime">anime</a>
@@ -28,7 +28,7 @@
             </ul>
         </div>
         <h1 id="anime">Anime:</h1>
-        <p>Ok first things first I love anime.Anime is what keeps my mental sanity.Whenever I am low I watch anime to get charged.why I like anime you may ask?</p>
+        <p>Ok, first things first I love anime. Anime is what keeps my mental sanity. Whenever I am low I watch anime to get charged. Why do I like anime you may ask?</p>
         <ol>
             <li><b>Diverse Storytelling:</b> Anime's wide range of genres and themes speaks to my heart, offering stories that resonate with my personal interests and emotions.</li>
             <li><b>Character Connection:</b> I find myself becoming deeply attached to the well-developed characters in anime and enjoy witnessing their growth and development throughout the series.</li>
@@ -39,22 +39,22 @@
             <li><b>Diversity of Genres:</b> Anime's vast array of genres ensures that there is always something new and exciting to discover, keeping my interest alive.</li>
         </ol>
         <h2>my first anime</h2>
-        <p>To be very fair my first anime was pokemon but I didn't knew it so my known first anime was Tokyo ghoul<br><img src="tokyoGhoul.jpg" height="640px" width="480px">
-        <br>I enjoyed it soo much that I started watching many more and slowly I became vetaran.
-        now I am at a point that I can tell you my to ten but sadly tokyoGhoul is not in it.
+        <p>To be very fair my first anime was Pokemon but I didn't know it so my known first anime was Tokyo Ghoul<br><img src="tokyoGhoul.jpg" height="640px" width="480px">
+        <br>I enjoyed it so much that I started watching many more and slowly I became a veteran.
+        Now I am at a point where I can tell you my top ten but sadly Tokyo Ghoul is not in it.
         <h2>My top ten</h2>
         <ol reversed id="ten">
             
-            <li><h4>dr. stone </h4><br><img src="dr.stone.jpg"><br>this is a very good any if you are science student so go for it.</li>
-            <li><h4>one piece</h4> <br><img src="onepiece.jpg"><br> see the thing is I didn't finish it thus it is in 9th maybr later it may move up in the list.</li>
-            <li><h4>jujutsu kaisen</h4><br><img src="juju.jpg"><br> this is really good one, with great art I can't deny. It may go up since it only has two season.</li>
-            <li><h4>mushoku tensei</h4><br><img src="musu.jpg"><br> if you ask me then I have to say this is the peak isekai no cap, from art to story it is actually very good.</li>
-            <li><h4>one punch man</h4><br><img src="OIP.jpg"><br>to be honest through out the anime world this is mc (saitama) is  one of the strongest character.it is also gag Character so sometimes it gets comedic.Give it go you will like it.</li>
-            <li><h4>demon slayer</h4><br><img src="demon.jpg"><br> god what art work, you wont believe it with just few word.You have to see it.It is very unique it has a great character building with unfathomable story (I read manga so trust me).</li>
-            <li><h4>black clover</h4><br><img src="blackBull.jpg"><br>most underrated one.Obviously it has very good animation and is story telling is:- this is a story of boy in magic world where every one can use magic except him.He also wants to be wizard king so humilation rivals and problem of life are boud to have but his determination is what makes him move forward.</li>
-            <li><h4>naruto</h4><br><img src="naru.jpg"><br>Naruto uzumaki now if you are already reading to this point then you already know the emotions,thing is this like telling how good you imginary crush is,simply "Unexplainable" if some one doesn't watch naruto and he likes anime then it is like a sin for him.</li>
-            <li><h4>dragon ball z</h4><br><img src="dragon.jpg"><br>Ok so this anime is all about fight scene, just op, like soo good it will give you a feel of jhon wick.Art is extremely good and very large amount of content.You will like it instantly.in this anime Goku meaning the mc do lose but he comes back strong, giving you lesson that no matter how much you fall you can get back up.(by the way goku is stronger than saitama).</li>
-            <li><h4>attack on titan</h4><br><img src="R.jpg"><br>So you are here already wellcome this is my favorite anime for now. so let's start with artwork 11/10 you cannot say any thing bad about it,like it's the best art i have seen in a while.Now lets go to story, bro it will break you and you will cry , it bound to happen. With meaning that gives lifelesson betrayal,heartbreak,revenge,any many sad and dark thing and it also have many positive things like freedom, enjoying little moment etc. a complete rollercoster.So watch it if your mental stability is good.(Unpopular oppinion but "gabi" is shit like "sakura" in naruto is trash)</li>
+            <li><h4>Dr. stone </h4><br><img src="dr.stone.jpg"><br>this is a very good any if you are a science student so go for it.</li>
+            <li><h4>One piece</h4> <br><img src="onepiece.jpg"><br> see the thing is I didn't finish it thus it is on the 9th maybe later it may move up in the list.</li>
+            <li><h4>Jujutsu kaisen</h4><br><img src="juju.jpg"><br> this is a really good one, with great art I can't deny it. It may go up since it only has two seasons.</li>
+            <li><h4>Mushoku tensei</h4><br><img src="musu.jpg"><br> if you ask me then I have to say this is the peak isekai no cap, from art to story it is actually very good.</li>
+            <li><h4>One punch man</h4><br><img src="OIP.jpg"><br>to be honest, throughout the anime world, this is mc (Saitama) is  one of the strongest characters.it is also a gag Character so sometimes it gets comedic. Give it go a you will like it.</li>
+            <li><h4>Demon slayer</h4><br><img src="demon.jpg"><br> god, what artwork, you won't believe it with just a few words. You have to see it. It is unique , it has a great character building with unfathomable story (I read manga so trust me).</li>
+            <li><h4>Black clover</h4><br><img src="blackBull.jpg"><br>most underrated one.Obviously it has very good animation and is story telling is:- this is a story of boy in magic world where every one can use magic except him.He also wants to be wizard king so humilation rivals and problem of life are boud to have but his determination is what makes him move forward.</li>
+            <li><h4>Naruto</h4><br><img src="naru.jpg"><br>Naruto uzumaki now if you are already reading to this point then you already know the emotions,thing is this like telling how good you imginary crush is,simply "Unexplainable" if some one doesn't watch naruto and he likes anime then it is like a sin for him.</li>
+            <li><h4>Dragon ball z</h4><br><img src="dragon.jpg"><br>Ok so this anime is all about fight scene, just op, like soo good it will give you a feel of jhon wick.Art is extremely good and very large amount of content.You will like it instantly.in this anime Goku meaning the mc do lose but he comes back strong, giving you lesson that no matter how much you fall you can get back up.(by the way goku is stronger than saitama).</li>
+            <li><h4>Attack on titan</h4><br><img src="R.jpg"><br>So you are here already wellcome this is my favorite anime for now. so let's start with artwork 11/10 you cannot say any thing bad about it,like it's the best art i have seen in a while.Now lets go to story, bro it will break you and you will cry , it bound to happen. With meaning that gives lifelesson betrayal,heartbreak,revenge,any many sad and dark thing and it also have many positive things like freedom, enjoying little moment etc. a complete rollercoster.So watch it if your mental stability is good.(Unpopular oppinion but "gabi" is shit like "sakura" in naruto is trash)</li>
             </h4>
         </ol>
         </p>
